
=======================================================
            WanT code:  Log of Changes 
=======================================================


28 Jan 2009      plugins are almost properly compiling. Configuration machinery
                 updated. (AF)

27 Jan 2009      plugins tree added to want distribution: useful to treat
                 external libs and interfaces to Abinit, etc. (AF)

14 Jan 2009      debug_level variable added to WanT PPs. Documentation for
                 midpoint program added. (AF)

05 Jan 2009      References in test03 updated. Io_name routine generalize to
                 deal also with transport files. (AF)

04 Jan 2009      Bug fixed in bcast of rovp in hamiltonian_read; it
                 was shown only by blc2wan.x (AF)

01 Jan 2009      Happy new year. (AF)

28 Dec 2008      cmplx_bands.f90 and dos.f90 parallelized over energies
                 and kpts respectively. (AF)

27 Dec 2008      bands.f90 program made parallel over kpts.
                 Test script-system updated to take into account parallelism
                 (which can be manually switched off). AF

25 Dec 2008      Bug fixed in ~want/libs (zmat_hdotp). Merry Christmas. 
                 iwin_min, iwin_max, ifroz_min, ifroz_max variables added. (AF)

16 Dec 2008      Important changes in the transport code: reorganization of
                 data storage aimed to include correlation sgm's more easily. (AF)

05 Dec 2008      Bug fixed in current.f90 (call to input_from_file), courtesy of
                 Miroslava Dieskova. QExml lib debugged ad upgraded. Quality
                 of test03 improved. Documentation updated according to bugs
                 reported by Caterina Cocchi et al. (AF)

21 Nov 2008      Bug in the disentanglement restart procedure fixed. 
                 Parallelism improved using MPI_allgatherv in disentangle. (AF)

20 Nov 2008      Bug fixed in util.f90. (AF)
