@@ -12,18 +12,16 @@ TARBALL=../archive/$(PACKAGE).tar.gz
 #
 # redefinitions
 #
-FC=$(F90)
-FCFLAGS=$(F90FLAGS)
-INSTALL_DIR=$(HOMEDIR)/plugins/etsf_io/tmp
+INSTALL_DIR=$(TOPDIR)/plugins/etsf_io/tmp
 AUXFLAGS= --prefix=$(INSTALL_DIR) \
-          --with-netcdf=$(NETCDF_LIBS) \
-          --with-netcdf-module-path=$(NETCDF_INCLUDE) \
-          --with-netcdf-ldflags="-L$(HOMEDIR)/plugins/netcdf -lnetcdf" 
+          --with-moduledir=$(INSTALL_DIR)/include \
+          --with-netcdf-module-path="$(NETCDF_INCLUDE)" \
+          --with-netcdf-ldflags="-L$(TOPDIR)/plugins/netcdf"
 
 #
 # MAIN target
 #
-all: lib
+all: package-ready-stamp
 
 uncompress-stamp:
 	../../conf/missing --run tar xf $(TARBALL)
@@ -31,28 +29,36 @@ uncompress-stamp:
 	touch uncompress-stamp
 
 configure-stamp: uncompress-stamp
-	if test -d $(PACKAGE) ; then \
-	   ( cd $(PACKAGE);  ./configure $(AUXFLAGS) ) ; fi
+	if test -d $(PACKAGE) ; then ( cd $(PACKAGE);  \
+	        ./configure $(AUXFLAGS)  \
+	        FC=$(F90) \
+	        F77=$(F77) \
+	        FFLAGS="$(FFLAGS)" \
+	        FCFLAGS="$(F90FLAGS)" \
+	        INSTALL_DIR="$(INSTALL_DIR)" ); \
+	fi
 	touch configure-stamp
 	
-lib: uncompress-stamp configure-stamp
+package-ready-stamp: uncompress-stamp configure-stamp
 	if test -d $(PACKAGE) ; then \
 	( cd $(PACKAGE);  $(MAKE) ; $(MAKE) install ) ; fi
 	#
-	mv $(INSTALL_DIR)/bin/* .
-	mv $(INSTALL_DIR)/lib/* .
-	mv $(INSTALL_DIR)/include/*/* .
+	test -d $(INSTALL_DIR) && mv $(INSTALL_DIR)/bin/* .
+	test -d $(INSTALL_DIR) && mv $(INSTALL_DIR)/lib/* .
+	test -d $(INSTALL_DIR) && mv $(INSTALL_DIR)/include/*/*.mod .
+	#
+	touch package-ready-stamp
 
 #
 # cleaning
 #
 clean:
 	if test -d $(PACKAGE) ; then ( cd $(PACKAGE);  $(MAKE) clean ) ; fi
-	- rm *.a *.mod *.h
+	- rm *.a *.mod *.h package-ready-stamp
 
-wash:
+wash: clean
 	if test -d $(PACKAGE) ; then ( rm -rf $(PACKAGE) ) ; fi 
-	- rm uncompress-stamp configure-stamp
+	- rm uncompress-stamp configure-stamp package-ready-stamp
 	- rm -rf $(INSTALL_DIR)
 	
 
