@@ -12,16 +12,14 @@ TARBALL=../archive/$(PACKAGE).tar.gz
 #
 # redefinitions
 #
-FC=$(F90) 
-FCFLAGS=$(F90FLAGS) 
-INSTALL_DIR=$(HOMEDIR)/plugins/netcdf/tmp
+INSTALL_DIR=$(TOPDIR)/plugins/netcdf/tmp
 AUXFLAGS="--prefix=$(INSTALL_DIR)"
 
 
 #
 # MAIN target
 #
-all: lib
+all: package-ready-stamp
 
 uncompress-stamp:
 	../../conf/missing --run tar xf $(TARBALL)
@@ -29,18 +27,27 @@ uncompress-stamp:
 	touch uncompress-stamp
 
 configure-stamp: uncompress-stamp
-	if test -d $(PACKAGE) ; then \
-	   ( cd $(PACKAGE);  ./configure $(AUXFLAGS) ) ; fi
+	if test -d $(PACKAGE) ; then ( cd $(PACKAGE);  \
+	      ./configure $(AUXFLAGS) \
+	      FC=$(F90) \
+	      F77=$(F77) \
+	      FFLAGS="$(FFLAGS)" \
+	      FCFLAGS="$(F90FLAGS)" \
+	      INSTALL_DIR="$(INSTALL_DIR)" ); \
+	fi
 	touch configure-stamp
 
-lib: uncompress-stamp configure-stamp
+package-ready-stamp: uncompress-stamp configure-stamp
 	if test -d $(PACKAGE) ; then \
 	( cd $(PACKAGE);  $(MAKE) ; $(MAKE) install ) ; fi
 	#
 	cp $(PACKAGE)/f90/*.mod .
 	mv $(INSTALL_DIR)/lib/*.a .
+	mv $(INSTALL_DIR)/lib/*.la .
 	mv $(INSTALL_DIR)/bin/* .
 	mv $(INSTALL_DIR)/include/* .
+	#	
+	touch package-ready-stamp
 	
 
 #
@@ -48,11 +55,11 @@ lib: uncompress-stamp configure-stamp
 #
 clean:
 	if test -d $(PACKAGE) ; then ( cd $(PACKAGE);  $(MAKE) clean ) ; fi
-	- rm *.mod *.a *.inc *.h *.hh ncdump ncgen
+	- rm *.mod *.a *.la *.inc *.h *.hh ncdump ncgen package-ready-stamp
 
-wash: 
+wash: clean
 	if test -d $(PACKAGE) ; then ( rm -rf $(PACKAGE) ) ; fi 
-	- rm uncompress-stamp configure-stamp 
+	- rm uncompress-stamp configure-stamp package-ready-stamp
 	- rm -rf $(INSTALL_DIR)
 	
 
